Allow for custom dialogue text offsetting.